--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>EPLAY - A sua loja de games</title>
+    <title>EFOOD - Viva experiências gastronômicas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-    <linkrel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-FONTINTEGRITYAQUI"
+    <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  integrity="sha512-FONTINTEGRITYAQUI"
   crossorigin="anonymous"
   referrerpolicy="no-referrer"
 />
 
-    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
